oops I break the theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,21 @@
   <body>
       <div id="header">
         <nav>
-          {% include navbar.html %}
+          <div class="navbar">
+<a href="https://gitpuleo.github.io/">Home</a>
+<a href="https://gitpuleo.github.io/resume/">Resume</a>
+<a href="https://gitpuleo.github.io/portfolio/">Portfolio</a>
+<a href="https://gitpuleo.github.io/projects/">Projects</a>
+<a href="https://gitpuleo.github.io/about/">About Me</a>
+<a href="https://gitpuleo.github.io/contact/">Contact</a>
+</div>
         </nav>
       </div><!-- end header -->
 
     <div class="wrapper">
 
-     <!-- > <section>
+      <section>
+        <!-- >
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.tagline | default: site.description | default: site.github.project_tagline }}</p>
@@ -34,10 +42,10 @@
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
-
+            -->
         {{ content }}
 
-      </section> -->
+      </section> 
 
     </div>
   </body>
