fixing navbar and theme issues

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,9 @@
 <div class="navbar">
-<a href="https://gitpuleo.github.io/">Home</a>
-<a href="https://gitpuleo.github.io/resume/">Resume</a>
-<a href="https://gitpuleo.github.io/portfolio/">Portfolio</a>
-<a href="https://gitpuleo.github.io/projects/">Projects</a>
-<a href="https://gitpuleo.github.io/about/">About Me</a>
-<a href="https://gitpuleo.github.io/contact/">Contact</a>
+<a href="https://gitpuleo.github.io/" class="btn">Home</a>
+<a href="https://gitpuleo.github.io/resume/" class="btn">Resume</a>
+<a href="https://gitpuleo.github.io/portfolio/" class="btn">Portfolio</a>
+<a href="https://gitpuleo.github.io/projects/" class="btn">Projects</a>
+<a href="https://gitpuleo.github.io/about/" class="btn">About Me</a>
+<a href="https://gitpuleo.github.io/contact/" class="btn">Contact</a>
 </div>
 
