--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,11 @@
-<div class="navbar">
-<a href="https://gitpuleo.github.io/" class="btn">Home</a>
-<a href="https://gitpuleo.github.io/resume/" class="btn">Resume</a>
-<a href="https://gitpuleo.github.io/portfolio/" class="btn">Portfolio</a>
-<a href="https://gitpuleo.github.io/projects/" class="btn">Projects</a>
-<a href="https://gitpuleo.github.io/about/" class="btn">About Me</a>
-<a href="https://gitpuleo.github.io/contact/" class="btn">Contact</a>
-</div>
+<nav class="navbar">
+<ul>
+    <li><a href="https://gitpuleo.github.io/" class="btn">Home</a></li>
+    <li><a href="https://gitpuleo.github.io/resume/" class="btn">Resume</a></li>
+    <li><a href="https://gitpuleo.github.io/portfolio/" class="btn">Portfolio</a></li>
+    <li><a href="https://gitpuleo.github.io/projects/" class="btn">Projects</a></li>
+    <li><a href="https://gitpuleo.github.io/about/" class="btn">About Me</a></li>
+    <li><a href="https://gitpuleo.github.io/contact/" class="btn">Contact</a></li>
+</ul>
+</nav>
 
