--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
         <div id="title">
           <h1>Nick Puleo</h1>
-          <p>BFA, BA, MSc</p>
+          <p>Software Developer •Idea Collector • Pattern Afficiandao</p>
           <hr>
           {% comment %}
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
