--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,10 @@
 <nav class="navbar">
-<ul>
-    <li><a href="https://gitpuleo.github.io/" class="btn">Home</a></li>
-    <li><a href="https://gitpuleo.github.io/resume/" class="btn">Resume</a></li>
-    <li><a href="https://gitpuleo.github.io/portfolio/" class="btn">Portfolio</a></li>
-    <li><a href="https://gitpuleo.github.io/projects/" class="btn">Projects</a></li>
-    <li><a href="https://gitpuleo.github.io/contact/" class="btn">Contact</a></li>
+<ul class="nav_link">
+    <li><a href="https://gitpuleo.github.io/" class="nav_link">Home</a></li>
+    <li><a href="https://gitpuleo.github.io/resume/" class="nav_link">Resume</a></li>
+    <li><a href="https://gitpuleo.github.io/portfolio/" class="nav_link">Portfolio</a></li>
+    <li><a href="https://gitpuleo.github.io/projects/" class="nav_link">Projects</a></li>
+    <li><a href="https://gitpuleo.github.io/contact/" class="nav_link">Contact</a></li>
 </ul>
 </nav>
 
