--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,24 +1,33 @@
 
 
-.navbar {
-    background-color: #312f2f;
-    align-items: center;
-    justify-content: center;
-    
+#header .navbar {
+  display: flex;              
+  justify-content: center;    
+  align-items: center;        
+  background-color: #312f2f;
+  padding: 0.5rem 0;
 }
 
-.nav_link {
-    
-    gap: 1rem;
-    list-style: none;
-
+#header .navbar .nav_link {
+  display: flex;              
+  flex-wrap: wrap;            
+  gap: 1rem;                  
+  list-style: none;
+  margin: 0;                  
+  padding: 0;
 }
 
-.nav_link a {
-    color:#f0c674;
-    border-radius: 3px;
+/* Each link */
+#header .navbar .nav_link a {
+  display: block;
+  color: #f0c674;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  border-radius: 3px;
+  background: transparent;    
+  border: 0;
 }
 
-.nav_link a:hover {
-    background-color: #39363644;
+#header .navbar .nav_link a:hover {
+  background-color: #39363644;
 }
