--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
         <div id="title">
           <h1>Nick Puleo</h1>
-          <p>Software Developer • Idea Collector • Pattern Enthusiast</p>
+          <p>Software Developer • Pattern Enthusiast • Idea Collector</p>
           <hr>
           {% comment %}
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
